<resources>
    <string name="app_name">The Cook\'s Nook</string>
    <string name="cook_book_title">Virginia\'s Cook Book</string>
    <string name="breakfast_text">Breakfast</string>
    <string name="breakfast_icon_desc">Pancakes with syrup.</string>
    <string name="lunch_text">Lunch</string>
    <string name="lunch_icon_desc">Sandwich</string>
    <string name="dinner_text">Dinner</string>
    <string name="dinner_icon_desc">Turkey roast.</string>
    <string name="appetizers_text">Appetizers</string>
    <string name="appetizers_icon_desc">Chips and guacamole.</string>
    <string name="add_recipe">Add Recipe</string>

    <string name="kCal_progress"> %1$.1f/%2$dkCal</string>
    <string name="g_progress">%1$.1f/%2$dg</string>

    <!--  -->
    <string name="search_text_label">Name</string>
    <string name="recipe_instructions_label">Instructions</string>
    <string name="recipe_instructions_hint">Recipe preparation instructions</string>
    <string name="add_recipe_title">Add New Recipe</string>
    <string name="recipe_name_label">Name</string>
    <string name="recipe_name_prompt">Name</string>
    <string name="recipe_description_label">Description</string>
    <string name="recipe_description_hint">Description</string>
    <string name="add_ingredients_text">Add Ingredients</string>
    <string name="recipe_name_hint">Recipe name</string>
    <string name="view_all_recipes">View All Recipes</string>
    <string name="add_new_recipe_text">+ Add New Recipe</string>
    <string name="application_title">The Cook\'s Nook</string>
    <string name="recommended_recipe">Recommended Recipe</string>
    <string name="recipe_image_description">Recipe image</string>
    <string name="recipe_description">This is a sample recipe recommended by the application.</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="this_is_a_sample_recipe_recommended_by_the_application">This is a sample recipe recommended by the application.</string>
    <string name="shopping_list">Shopping List</string>
    <string name="recommended_recipe_description">This is a sample recipe recommended by the application.</string>
    <string name="personal_cook_book_title">Virginia\'s Cook Book!</string>
    <string name="this_is_a_recipe">This is a recipe!</string>
    <string name="recipe_title">Mexican Lasagna</string>
    <string name="sample_recipe_description">A savory casserole dish layered with beef, beans, cheese, and corn tortillas.</string>
    <string name="testing">testing</string>
    <string name="add_ingredient_button">+ Add</string>
    <string name="search">Search</string>

    <!-- ERROR MESSAGES -->
    <string name="non_null_error">Field cannot be left blank.</string>
    <string name="non_integer_error">Field can only contain numbers.</string>
    <string name="number_of_servings">Number of Servings</string>
    <string name="category">Category</string>
    <string name="search_for_ingredients">Search For Ingredients</string>
    <string name="ingredients_list">Ingredients List</string>
    <string name="preparation_instructions">Preparation Instructions</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="meal_planner_card_description">Plan daily meals and track your nutrition.</string>
    <string name="shopping_list_card_description">Make shopping lists out of your meal plans and recipes.</string>
    <string name="cookbook_card_description">It\'s time to put on your chef\'s hat! Browse your favorite recipes here.</string>
    <string name="add_new_meal_plan">+ Add New Meal Plan</string>
    <string name="servings">Servings: %1$d</string>
    <string name="nutrition_profile">Nutrition Profile</string>
    <string name="recipe_serving">%1$.1f%2$s</string>
    <string name="original_serving">%1$.1f%2$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
