<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe_recommendation_card"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:clickable="true"
    android:foreground="?android:selectableItemBackground"
    android:onClick="recommendedRecipeClicked"
    card_view:cardBackgroundColor="@color/colorPrimaryDark"
    app:cardUseCompatPadding="true"
    card_view:cardElevation="8dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/recipeList_recipeTitle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/colorNude"
            android:text="@string/recommended_recipe"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:paddingBottom="16dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/recipeList_recipeImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/turkey"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recipeList_recipeTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/recipeList_recipeDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".3"
            android:contentDescription="@string/recipe_image_description" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/recipeList_recipeDescription"
            android:text="@string/recipe_description"
            android:textColor="@color/colorNude"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recipeList_recipeTitle"
            app:layout_constraintStart_toEndOf="@+id/recipeList_recipeImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".7"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>