<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:elevation="20dp"
    tools:context=".CookBookHomeActivity">

    <TextView
        android:id="@+id/cookBookHome_activityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/cook_book_title"
        android:textColor="@color/colorNude"
        android:background="@color/colorPrimary"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cookBookHome_breakfastButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp"
        android:onClick="onBreakfastButtonClicked"
        card_view:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardUseCompatPadding="true"
        card_view:cardElevation="8dp"
        card_view:cardCornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/cookBookHome_dinnerButton"
        app:layout_constraintEnd_toStartOf="@+id/cookBookHome_lunchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cookBookHome_activityTitle"
        app:layout_constraintVertical_weight="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

    <TextView
        android:id="@+id/cookBookHome_breakfastLabel"
        android:text="@string/breakfast_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cookBookHome_breakfastIcon"
        style="@style/cookbook_headings" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/pancake"
            android:id="@+id/cookBookHome_breakfastIcon"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cookBookHome_breakfastLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/breakfast_icon_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cookBookHome_lunchButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        android:onClick="onLunchButtonClicked"
        card_view:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardUseCompatPadding="true"
        card_view:cardElevation="8dp"
        card_view:cardCornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/cookBookHome_appetizerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cookBookHome_breakfastButton"
        app:layout_constraintTop_toBottomOf="@+id/cookBookHome_activityTitle"
        app:layout_constraintVertical_weight="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

        <TextView
            android:id="@+id/cookBookHome_lunchLabel"
            android:text="@string/lunch_text"
            style="@style/cookbook_headings"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cookBookHome_lunchIcon"
            />

            <ImageView
                android:id="@+id/cookBookHome_lunchIcon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/sandwich"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cookBookHome_lunchLabel"
                android:contentDescription="@string/lunch_icon_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cookBookHome_dinnerButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onDinnerButtonClicked"
        card_view:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardUseCompatPadding="true"
        card_view:cardElevation="8dp"
        card_view:cardCornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/cookBookHome_dessertButton"
        app:layout_constraintEnd_toStartOf="@+id/cookBookHome_appetizerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cookBookHome_breakfastButton"
        app:layout_constraintVertical_weight="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/cookBookHome_dinnerLabel"
                android:text="@string/dinner_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/cookbook_headings"/>

            <ImageView
                android:id="@+id/cookBookHome_dinnerIcon"
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/turkey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cookBookHome_dinnerLabel"
                android:contentDescription="@string/dinner_icon_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cookBookHome_appetizerButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="onAppetizerButtonClicked"
        card_view:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardUseCompatPadding="true"
        card_view:cardElevation="8dp"
        card_view:cardCornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/cookBookHome_drinkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cookBookHome_dinnerButton"
        app:layout_constraintTop_toBottomOf="@+id/cookBookHome_lunchButton"
        app:layout_constraintVertical_weight="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/cookBookHome_appetizerLabel"
                android:text="@string/appetizers_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/cookbook_headings"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/nachos"
                android:id="@+id/cookBookHome_appetizerIcon"
                app:layout_constraintTop_toBottomOf="@+id/cookBookHome_appetizerLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/appetizers_icon_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cookBookHome_dessertButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onDessertButtonClicked"
        card_view:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardUseCompatPadding="true"
        card_view:cardElevation="8dp"
        card_view:cardCornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/barrier"
        app:layout_constraintEnd_toStartOf="@+id/cookBookHome_drinkButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cookBookHome_dinnerButton"
        app:layout_constraintVertical_weight="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/cookBookHome_dessertLabel"
                android:text="Dessert"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/cookbook_headings"/>

            <ImageView
                android:id="@+id/cookBookHome_dessertIcon"
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/dessert"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cookBookHome_dessertLabel"
                android:contentDescription="@string/dinner_icon_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cookBookHome_drinkButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="onDrinkButtonClicked"
        card_view:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardUseCompatPadding="true"
        card_view:cardElevation="8dp"
        card_view:cardCornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cookBookHome_dessertButton"
        app:layout_constraintTop_toBottomOf="@+id/cookBookHome_appetizerButton"
        app:layout_constraintVertical_weight="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/cookBookHome_drinkLabel"
                android:text="Drinks"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/cookbook_headings"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/juice"
                android:id="@+id/cookBookHome_drinkIcon"
                app:layout_constraintTop_toBottomOf="@+id/cookBookHome_drinkLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/appetizers_icon_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cookBookHome_viewAllButton"
        app:layout_constraintTop_toBottomOf="@+id/cookBookHome_dessertButton"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cookBookHome_viewAllButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp"
        android:onClick="onViewAllButtonClicked"
        card_view:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardUseCompatPadding="true"
        card_view:cardElevation="8dp"
        card_view:cardCornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@id/cookBookHome_addRecipeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier"
        app:layout_constraintVertical_weight="1" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <TextView
            android:id="@+id/cookBookHome_viewAllLabel"
            android:text="@string/view_all_recipes"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/cookbook_headings"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cookBookHome_addRecipeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="addRecipeButtonClicked"
        card_view:cardBackgroundColor="@color/colorAccent"
        app:cardUseCompatPadding="true"
        card_view:cardElevation="8dp"
        card_view:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cookBookHome_viewAllButton"
        app:layout_constraintVertical_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:id="@+id/cookBookHome_addRecipeLabel"
                style="@style/cookbook_headings"
                android:text="@string/add_new_recipe_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>